--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1271,7 +1271,7 @@ table tr:hover .table-links {
   padding-right: 15px !important;
 }
 .nav-pills .nav-item .nav-link:hover {
-  background-color: #f6f7fe;
+  background-color: #f6f7fe; 
 }
 .nav-pills .nav-item .nav-link.active {
   box-shadow: 0 2px 6px #acb5f6;
@@ -3400,8 +3400,10 @@ body.layout-3 .main-footer {
   margin-top: 3px;
   width: 100%;
 }
+
+/* hover sidebar */
 .main-sidebar .sidebar-menu li a:hover {
-  background-color: #f8fafb;
+  background-color: #efefef;
 }
 .main-sidebar .sidebar-menu li.active a {
   color: #6777ef;
